# charlotte

./: .entrypoint.sh  .gitignore  AudioScheduler.py  Dockerfile  README.md  charlotte_bot.py  credentials.json.template  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  log_server.py  pyproject.toml  requirements.txt  supervisord.conf  test_deezspot.py  test_deezspot_docker.sh  test_deezspot_fixed.py  test_docker_setup.sh  test_spotify_api.py  test_spotify_docker.sh  test_track_factory.py
.github/workflows/: main.yml
Modules/: ErrorHandler.py  LanguageResearcher.py  ServerClient.py  SpotifyDownloader.py  SpotifyMetadata.py  TrackFactory.py  YouTubeSource.py  getMetadata.py  getToken.py  getToken_v1.py  spotify.py
Modules/features/emoji_enlarger/: __init__.py  regex.py  service.py
Modules/features/eternal_return/: __init__.py  constants.py  plotting.py  service.py
Modules/features/konglish/: KonglishResolver.py
Modules/track_sources/: __init__.py  base.py  config.py
Modules/track_sources/providers/: __init__.py  memory.py  upload.py
Modules/track_sources/providers/soundcloud/: __init__.py  source.py  ytdl_client.py
Modules/track_sources/providers/spotify/: SpotifyDownloader.py  __init__.py  cli.py  getMetadata_v2.py  source.py  utils.py
Modules/track_sources/providers/youtube/: __init__.py  source.py  ytdl_client.py
Modules/track_sources/utils/: ytdl.py
