[project]
name = "charlotte"
version = "0.1.0"
description = "Charlotte Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.5",
    "aiosignal==1.2.0",
    "asyncio-atexit==1.0.1",
    "attrs==24.2.0",
    "awscrt==0.21.1",
    "awsiotsdk==1.22.0",
    "beautifulsoup4==4.13.3",
    "blinker==1.6.2",
    "bs4==0.0.2",
    "cachetools==5.5.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cryptography==44.0.0",
    "cycler==0.12.1",
    "Deprecated==1.2.18",
    "discord.py==2.5.0",
    "dotenv==0.9.9",
    "ffmpeg==1.4",
    "Flask==3.0.3",
    "fonttools==4.56.0",
    "frozenlist==1.5.0",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.2.1",
    "gspread==6.1.4",
    "h11==0.14.0",
    "httplib2==0.22.0",
    "idna==3.7",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "kiwisolver==1.4.8",
    "MarkupSafe==2.1.3",
    "matplotlib==3.10.1",
    "mss==10.0.0",
    "multidict==6.1.0",
    "mutagen==1.47.0",
    "numpy==2.2.3",
    "oauth2client==4.1.3",
    "oauthlib==3.2.2",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "propcache==0.2.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pycryptodome==3.23.0",
    "PyNaCl==1.5.0",
    "pyOpenSSL==24.3.0",
    "pyparsing==3.2.1",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "selenium==4.29.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "tenacity==9.0.0",
    "thinqconnect==1.0.1",
    "tqdm==4.67.1",
    "trio==0.29.0",
    "trio-websocket==0.12.2",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "watchdog==6.0.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "websockets==15.0",
    "Werkzeug==3.0.6",
    "wrapt==1.17.2",
    "wsproto==1.2.0",
    "yarl==1.18.0",
    "yt-dlp==2026.03.03",
    "curl-cffi>=0.5.10",
    "zendriver==0.5.1",
    "fastapi",
    "uvicorn[standard]"
]
